[tool.poetry]
name = "poitin"
version = "0.1.0"
description = ""
authors = ["ConorBobbleHat"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.3.0"
pefile = "^2023.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
